API - Ajout d'une requête pour obtenir la list des pins et mise à jour de la documentation de l'API
